tests/pass/comment.el

(def fst (fn (x y) x))

;; (fun (x)
;; 	 (fst (x 1) (x true)))

fst
