tests/fail/monomorphic-parameter.el
(def fst (fn (x y) x))

(fn (x)
    (fst (x 1) (x true)))

